# yahoo-finance

./: .gitignore  LICENSE  assets.toml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
src/: main.py
